--- a/Code/style/atoms.css
+++ b/Code/style/atoms.css
@@ -1,3 +1,9 @@
+/* Logo */
+.logo__title {
+    color: rgb(61, 61, 192);
+    font-weight: 700;
+    font-size: larger;
+}
 
 /* Buttons */
 .btn-primary {
@@ -8,7 +14,6 @@
     background: -moz-linear-gradient(90deg, rgba(62,79,255,1) 0%, rgba(43,48,179,1) 100%);
     background: -webkit-linear-gradient(90deg, rgba(62,79,255,1) 0%, rgba(43,48,179,1) 100%);
     background: linear-gradient(90deg, rgba(62,79,255,1) 0%, rgba(43,48,179,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3e4fff",endColorstr="#2b30b3",GradientType=1);
 }
 .btn-primary:hover{
     border: none;
@@ -16,7 +21,6 @@
     background: -moz-linear-gradient(90deg, rgba(83,116,255,1) 0%, rgba(67,72,198,1) 100%);
     background: -webkit-linear-gradient(90deg, rgba(83,116,255,1) 0%, rgba(67,72,198,1) 100%);
     background: linear-gradient(90deg, rgba(83,116,255,1) 0%, rgba(67,72,198,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5374ff",endColorstr="#4348c6",GradientType=1);
 }
 .btn-primary:focus{
     box-shadow: rgba(0, 26, 255, 0.22) 0px -5px 10px, rgba(0, 26, 255, 0.22) 0px 10px 6px -5px, rgba(0, 26, 255, 0.27) 0px 5px 10px -5px, rgba(10, 37, 64, 0.5) 0px -2px 6px 0px inset !important;
@@ -27,6 +31,5 @@
     background: -moz-linear-gradient(90deg, rgba(178,193,255,1) 0%, rgba(83,114,233,1) 100%);
     background: -webkit-linear-gradient(90deg, rgba(178,193,255,1) 0%, rgba(83,114,233,1) 100%);
     background: linear-gradient(90deg, rgba(178,193,255,1) 0%, rgba(83,114,233,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b2c1ff",endColorstr="#5372e9",GradientType=1);
     border: none;
 }
