--- a/Code/style/general.css
+++ b/Code/style/general.css
@@ -1,6 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+* {
+    font-family: 'Lato', sans-serif !important;
+}
 html, body, main {
     width: 100%;
     height: 100%;
     padding: 0px;
     margin: 0px;
+}
+
+.bold {
+    font-weight: 700;
+}
+.link-dark {
+    color: rgb(88, 88, 88);
+}
+
+h1 {
+    font-size: calc(2rem + 1.8vw);
+    font-weight: 900;
+    color: rgb(38, 38, 105);
+}
+.a100 {
+    height: 100px;
+    width: 100%;
+    background-color: black;
 }
