--- a/Code/style/molecules.css
+++ b/Code/style/molecules.css
@@ -1,7 +1,9 @@
 header {
     margin: 0px;
-    backdrop-filter: blur(10px);
-    background-color: rgba(255, 255, 255, 0.8);
+    padding: 1.5rem 0.25rem;
+
+    backdrop-filter: blur(7px);
+    background-color: rgba(255, 255, 255, 0.6);
 
     position: absolute;
     top: 0;
@@ -11,4 +13,14 @@ header {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+}
+
+
+@media (min-width: 768px) { 
+    
+    header {
+        padding-left: 4rem;
+        padding-right: 4rem;
+    }
+
 }
