--- a/Code/style/atoms.css
+++ b/Code/style/atoms.css
@@ -34,3 +34,48 @@
     background: linear-gradient(90deg, rgba(178,193,255,1) 0%, rgba(83,114,233,1) 100%);
     border: none;
 }
+
+/* ICONS */
+.icon_box {
+    background-color: rgb(225, 243, 255);
+    border-radius: 5px;
+    margin-right: 0.5rem;
+    /* padding: 3px 7px; */
+
+    font-size: small;
+    min-width: 25px;
+    min-height: 25px;
+    
+    max-width: 25px;
+    max-height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon_box.big {
+    font-size: x-large;
+    min-width: 40px;
+    min-height: 40px;
+    max-width: 25px;
+    max-height: 25px;
+}
+.icon_box:hover {
+    box-shadow: inset -1px -1px 3px 2px rgba(0, 47, 255, 0.1),
+    rgba(255, 255, 255, 1) 0px 3px 2px -1px,
+    rgb(182, 219, 241) 0px 5px 5px -2px;
+}
+.icon_box > i {
+    color: rgb(61, 61, 192);
+}
+
+.icon_box.special {
+    background-color: rgb(244, 255, 214);
+}
+.icon_box.special:hover {
+    box-shadow: inset -1px -1px 3px 2px rgba(0, 0, 0, 0.1),
+    rgba(255, 255, 255, 1) 0px 3px 2px -1px,
+    rgb(224, 236, 189) 0px 5px 3px -2px;
+}
+.icon_box.special > i {
+    color: rgb(201, 187, 0);
+}
