--- a/Code/style/landing.css
+++ b/Code/style/landing.css
@@ -1,22 +1,34 @@
+/* -------- MAIN SECTION -------- */
 .main {
     /* width: 100%; */
     padding: 0px;
     margin: 0px;
+    position: relative;
+    height: 100vh;
 }
-
+.main__container{
+    padding: 1.5rem 1rem;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(1px);
+}
 .main__info {
-    padding: 1.5rem 0.25rem;
+    position: relative;
+    top: calc( (1.5rem * 2) + (0.6rem * 2)*3 + 4rem);
+    /* top: calc( (1.5rem * 2) + (0.6rem * 2) + 4rem); */
+    /* background-color: rgba(255, 255, 255, 0.753); */
+    /* border-radius: 10px; */
 }
-
 .main__image--container {
+    position: absolute;
+    z-index: -1;
     height: 100vh;
     background-color: rgb(255, 255, 255);
     background-image: url('./../images/nurse-2.jpg');
-    background-position: center ;
+    background-position: 50% calc(50% + 22vw);
     background-size: cover;
     background-repeat: no-repeat;
 }
-
 .main__image {
     object-fit: cover;
     height: 100%;
@@ -24,6 +36,10 @@
 }
 
 /* Vaccination form */
+.vaccination__container {
+    position: absolute;
+    bottom: 1.5rem;
+}
 .vaccination__form {
     position: relative;
 
@@ -33,6 +49,14 @@
 
     border-radius: 10px;
     padding: 2rem;
+    width: calc(100vw - 1rem*2);
+}
+.vaccination__form>div{
+    /* Form container */
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-wrap: wrap;
 }
 .vaccination__input-group {
     width: 28%;
@@ -40,13 +64,11 @@
     align-content: flex-end;
 }
 .vaccination__input-group:last-child {
+    /* Submit button */
     width: 15%;
     padding: 0;
     margin: auto;
 }
-/* .vaccination__input-group:last-child button{
-    margin: 0;
-} */
 .vaccination__input-group h5{
     color: #566d84;
     font-weight: 500;
@@ -56,13 +78,11 @@
 .vaccination__input-group select
 {
     border: none;
-
-    font-size: large;
+    font-size: 1.2rem;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 5px -4px;
     font-weight: 600;
     color: rgb(40, 40, 114);
 }
-
 .vaccination__input-group input:hover,
 .vaccination__input-group input:focus,
 .vaccination__input-group select:hover,
@@ -70,14 +90,67 @@
     box-shadow: rgb(40, 40, 114, 0.3) 0px 5px 5px -2px;
 }
 
+/* VACCINES LOGOS SECTION */
+.vaccines_logos {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.vaccines_logos img{
+    position: relative;
+    filter: saturate(0.2) contrast(0.5) opacity(0.15);
+    transform: scale(90%);
+    margin: 1rem;
+}
+.vaccines_logos img:nth-child(1){
+    /* AstraZeneca logo */
+    height: 70px;
+}
+.vaccines_logos img:nth-child(2){
+    /* Sinovac logo */
+    height: 32px;
+}
+.vaccines_logos img:nth-child(3){
+    /* Pfizer logo */
+    height: 72px;
+    top: 17px;
+}
+.vaccines_logos img:nth-child(4){
+    /* Moderna logo */
+    height: 44px;
+    top: 10px;
+}
+
+/* Vaccine Information Section */
+.vaccine_info__beneficts {
+    padding-bottom: 100px;
+}
+.vaccine_info__beneficts>section>div{
+    padding: 1.2rem;
+    height: 100%;
+    box-shadow: rgba(255, 255, 255, 1) 0px 0px 5px -2px,
+    rgb(182, 219, 241) 0px 0px 6px -2px;
+    border-radius: 10px;
+}
+.vaccine_info__beneficts>section>div:hover{
+    box-shadow: rgb(168, 221, 252) 0px 3px 20px -2px;
+}
+
 /* Medium devices breakpoint */
 @media (min-width: 768px) {
-
-    .main__info {
+    .main__container{
         padding-left: 4rem;
         padding-right: 4rem;
     }
+    .main__info {
+        top: calc( (1.5rem * 2) + (0.6rem * 2) + 2rem);
+    }
     .main__image--container{
+        position: relative;
         background-position: 50% calc(50% + 4vw);
     }
     .vaccination__form {
@@ -85,17 +158,15 @@
     }
 }
 
-/* X - Large device breakpoint */
+/* Large device breakpoint */
 @media (min-width: 992px) {
     .vaccination__form {
         width: 75vw;
     }
+    .main__info {
+        top: calc( (1.5rem * 2) + (0.6rem * 2) + 4rem);
+    }
 }
-
-/* X - Large device breakpoint
-@media (min-width: 1200px) {
-    
-} */
 
 /* XX - Large device breakpoint */
 @media (min-width: 1400px) {
