--- a/Code/style/molecules.css
+++ b/Code/style/molecules.css
@@ -13,6 +13,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    box-shadow: 0px 3px 15px -15px rgb(85, 85, 85);
 }
 
 
