--- a/Code/style/landing.css
+++ b/Code/style/landing.css
@@ -25,8 +25,9 @@
     background-color: rgb(255, 255, 255);
     /* background-image: url('./../images/nurse-2.jpg'); */
     /* background-position: 50% calc(50% + 22vw); */
-    background-image: url('./../images/vaccination-2.jpg');
-    background-position: 50% calc(50% + 10vw);
+    background-image: url('./../images/nurse-1.jpg');
+    background-position: center;
+    /* background-position: 50% calc(50% + 10vw); */
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -139,7 +140,7 @@
 .preparations__image--container {
     background-color: rgb(255, 255, 255);
     background-image: url('./../images/vaccination-1.jpg');
-    background-position: calc(50% + 0vw) 50%;
+    background-position: center;
     /* background-position: center; */
     height: 60vh;
     /* min-height: 80vh;
@@ -218,7 +219,7 @@
     }
     .main__image--container{
         position: relative;
-        background-position: 50% calc(50% + 4vw);
+        /* background-position: 50% calc(50% + 4vw); */
     }
     .vaccination__container {
         top: unset;
@@ -260,7 +261,7 @@
     }
     .preparations__image--container {
         height: 80vh;
-        background-position: calc(50% + 5vw) 50%;
+        /* background-position: calc(50% + 5vw) 50%; */
     }
 }
 
